--- a/src/app/pages/media-queue/add-media-dialog/add-media-dialog.html
+++ b/src/app/pages/media-queue/add-media-dialog/add-media-dialog.html
@@ -1,7 +1,7 @@
 <div class="dialog">
   <h1 mat-dialog-title>Add media to queue</h1>
   <div mat-dialog-content class="mat-dialog-content">
-    <mat-form-field appearance="fill" class="input-full-width">
+    <mat-form-field class="input-full-width">
       <mat-icon class="circle" matPrefix>link</mat-icon>
       <mat-label>URL</mat-label>
       <input matInput type="text" [(ngModel)]="data.url" />
