--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -144,7 +144,7 @@
         } @else {
         <div class="notification-list">
           @for (notification of systemNotifications(); track trackByNotificationId($index, notification)) {
-          <div class="notification-item" [class.unread]="!notification.read">
+          <div class="notification-system-item" [class.unread]="!notification.read">
             <div class="notification-icon-wrapper">
               <mat-icon class="notification-bell">notifications</mat-icon>
             </div>
