--- a/src/app/components/custom-dialog/custom-dialog.component.scss
+++ b/src/app/components/custom-dialog/custom-dialog.component.scss
@@ -330,10 +330,9 @@
   }
 }
 
-// Focus state for accessibility
+// Focus state for accessibility - disabled to avoid visible outline
 .dialog-container:focus-visible {
-  outline: 2px solid var(--mat-sys-primary);
-  outline-offset: -2px;
+  outline: none;
 }
 
 // Print styles
