--- a/src/app/components/custom-dialog/custom-dialog.component.scss
+++ b/src/app/components/custom-dialog/custom-dialog.component.scss
@@ -17,7 +17,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100dvh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
@@ -57,8 +57,8 @@
   (max-height: 700px) {
     width: 100%;
     max-width: 100%;
-    max-height: 100dvh;
-    height: 100dvh;
+    max-height: 100%;
+    height: 100%;
     border-radius: 0;
   }
 }
