feat: Implement chat list scroll listener to auto-load more chats

--- a/src/app/pages/messages/messages.component.html
+++ b/src/app/pages/messages/messages.component.html
@@ -20,7 +20,7 @@
         </button>
       </div>
     </div>
-    <div class="message-threads">
+    <div class="message-threads" #messageThreads>
       @if (!hasChats()) {
       <div class="empty-chats">
         <mat-icon>forum</mat-icon>
